Fix styling of Fill in on mobile; Add log for server side validation failures of AI generations

--- a/apps/AyalasLanguageWeb/src/App.css
+++ b/apps/AyalasLanguageWeb/src/App.css
@@ -195,6 +195,15 @@ input:required:invalid {
   overflow-wrap: break-word;
 }
 
+.inline-content-line-part {
+  display: inline-flex;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-top: 15px;
+  white-space: normal;
+  overflow-wrap: break-word;
+}
+
 .text-area-wide {
   width: 100%;
   height: 200px;
